// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rule deprecated should contain contextual documentation 1`] = `
Object {
  "description": "HTML5 has deprecated the \`<center>\` element. It should not be used in new code.",
  "url": "https://html-validate.org/rules/deprecated.html",
}
`;

exports[`rule deprecated should contain documentation 1`] = `
Object {
  "description": "HTML5 has deprecated many old elements and they should not be used in new code.",
  "url": "https://html-validate.org/rules/deprecated.html",
}
`;

exports[`rule deprecated smoketest 1`] = `
Array [
  Object {
    "errorCount": 1,
    "filePath": "test-files/rules/deprecated.html",
    "messages": Array [
      Object {
        "column": 2,
        "context": undefined,
        "line": 2,
        "message": "<marquee> is deprecated",
        "offset": 20,
        "ruleId": "deprecated",
        "selector": "marquee",
        "severity": 2,
        "size": 7,
      },
    ],
    "source": "<p>lorem ipsum</p>
<marquee>foobar</marquee>
",
    "warningCount": 0,
  },
]
`;
